--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "neighbourhood-map",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://evigian.github.io/neighbourhood-map/",
   "dependencies": {
     "escape-string-regexp": "^1.0.5",
+    "gh-pages": "^1.2.0",
     "react": "^16.4.1",
     "react-burger-menu": "^2.5.2",
     "react-dom": "^16.4.1",
@@ -16,6 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   }
 }
